# module-example-cpp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  apt-setup.sh  main.cpp  meta.json  run.sh  signalmgr.cpp
.github/workflows/: build.yml  build2.yml  debian.yml
src/: main.cpp  signalmgr.hpp  wifi.cpp  wifi.hpp
